--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@ background: #C19A4D;
   background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(41, 39, 52, 1) 150%);
 } */
 
+.card-gradient {
+  background: linear-gradient(90deg, rgba(41, 39, 52, 1) 0%, rgba(0, 0, 0, 1) 50%);
+}
+
 /* styles.css or global.css */
 .background-gradients {
   background: #0C1622; /* bg-white/10 */
